Add styles.css and update form and link elements

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
         <title>Search</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <form action="https://www.google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
+            <input id="query" type="text" name="q">
+            <input id="submit" type="submit" value="Google Search">
         </form>
-        <a href="http://127.0.0.1:5500/advanced_search.html">Advanced search</a>
-        <a href="http://127.0.0.1:5500/image_search.html">Image search</a>
+        <a id="advanced_search" href="http://127.0.0.1:5500/advanced_search.html">Advanced search</a>
+        <a id="image_search"href="http://127.0.0.1:5500/image_search.html">Image search</a>
     </body>
 </html>
