Update title and add stylesheet link in image_search.html

--- a/image_search.html
+++ b/image_search.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Image search</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <a id="google_search" href="http://127.0.0.1:5500/index.html">Google search</a>
 </body>
 </html>
