Add search container div to form

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <form action="https://www.google.com/search">
-            <input id="query" type="text" name="q">
-            <input id="submit" type="submit" value="Google Search">
+            <div id="search_container">
+                <input id="query" type="text" name="q">
+                <input id="submit" type="submit" value="Google Search">
+            </div>
         </form>
         <a id="advanced_search" href="http://127.0.0.1:5500/advanced_search.html">Advanced search</a>
         <a id="image_search"href="http://127.0.0.1:5500/image_search.html">Image search</a>
