Add Google Image Search form to image_search.html

--- a/image_search.html
+++ b/image_search.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <form action="https://www.google.com/imghp" method="GET">
+        <div id="search_container">
+            <input id="query" type="text" name="q">
+            <input type="hidden" name="tbm" value="isch">
+            <input id="submit" type="submit" value="Google Image Search">
+        </div>
+    </form>
     <a id="google_search" href="http://127.0.0.1:5500/index.html">Google search</a>
 </body>
 </html>
