--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <form action="https://www.google.com/search">
             <div id="search_container">
                 <input id="query" type="text" name="q">
-                <input id="submit" type="submit" value="Google Search">
+                <div id="submit_container">
+                    <input id="submit" type="submit" value="Google Search">
+                    <input type="submit" name="btnI" value="I'm Feeling Lucky">
+                </div>
             </div>
         </form>
         <a id="advanced_search" href="http://127.0.0.1:5500/advanced_search.html">Advanced search</a>
